simplify stream toList