@@ -51,7 +51,6 @@ import java.util.TimerTask;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.LongStream;
 import java.util.stream.Stream;
@@ -77,7 +76,7 @@ public class PGEventStream extends AbstractEventStream implements PGNotification
                     .namingPattern(i == 0 ? "salt-global-event-thread-%d" : String.format("salt-event-thread-%d", i))
                     .build()
         )
-    ).collect(Collectors.toList());
+    ).toList();
 
 
     /**
@@ -142,7 +141,7 @@ public class PGEventStream extends AbstractEventStream implements PGNotification
 
                         List<Long> missingJobs = IntStream.range(0, allJobs.size())
                             .mapToObj(i -> executorServices.get(i).getActiveCount() > 0 ? 0 : allJobs.get(i))
-                            .collect(Collectors.toList());
+                            .toList();
 
                         if (missingJobs.stream().mapToLong(l -> l).sum() > 0) {
                             LOG.warn("Found {} events without a job. Scheduling...", missingJobs);
@@ -172,7 +171,7 @@ public class PGEventStream extends AbstractEventStream implements PGNotification
     public void notification(int processId, String channelName, String payload) {
         List<Long> counts = Arrays.stream(payload.split(","))
                 .map(Long::valueOf)
-                .collect(Collectors.toList());
+                .toList();
         notification(counts);
     }
 
